--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compile 'com.android.support:design:25.0.1'
     testCompile 'junit:junit:4.12'
 
-    compile project (':chopperannotation')
-    apt project(":chopperprocessor")
+//    compile project (':chopperannotation')
+//    apt project(":chopperprocessor")
+
+    compile 'com.github.levelapp.Chopper:chopperannotation:0.2'
+    apt 'com.github.levelapp.Chopper:chopperprocessor:0.2'
 }
