--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
 
 //    compile 'com.github.levelapp.Chopper:chopperannotation:0.3'
 //    compile 'com.github.levelapp.Chopper:chopperbutterknife:0.3'
+//    compile 'com.github.levelapp.Chopper:chopperrxjava:0.3'
 //    apt 'com.github.levelapp.Chopper:chopperprocessor:0.3'
 }
