refactor + add realm

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
@@ -32,13 +33,12 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
-//    compile 'io.reactivex:rxjava:1.2.4'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.3'
+    compile 'io.reactivex:rxjava:1.2.4'
+    compile 'io.reactivex:rxandroid:1.2.1'
 
     compile project (':chopperannotation')
     compile project(":chopperbutterknife")
-//    compile project(":chopperrxjava")
-    compile project(":chopperrxjava2")
+    compile project(":chopperrxjava")
     apt project(":chopperprocessor")
 
 //    compile 'com.github.levelapp.Chopper:chopperannotation:0.3'
