--- a/chopperrealm/src/main/AndroidManifest.xml
+++ b/chopperrealm/src/main/AndroidManifest.xml
@@ -1,11 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.levelapp.chopper">
-
-  <application android:allowBackup="true"
-    android:label="@string/app_name"
-    android:supportsRtl="true"
-  >
-
-  </application>
-
+  package="com.levelapp.realmchopper">
 </manifest>
