--- a/chopperannotation/build.gradle
+++ b/chopperannotation/build.gradle
@@ -1,8 +1,19 @@
 apply plugin: 'java'
 apply plugin: 'maven'
 
+configurations {
+    provided
+}
+
+sourceSets {
+    main {
+        compileClasspath += configurations.provided
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.android:android:4.1.1.4'
 }
 
 sourceCompatibility = "1.7"
