--- a/chopperannotation/build.gradle
+++ b/chopperannotation/build.gradle
@@ -13,6 +13,7 @@ sourceSets {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'org.jetbrains:annotations-java5:15.0'
 }
 
 sourceCompatibility = "1.7"
