--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -55,8 +55,9 @@ dependencies {
     compile project(":chopperrxjava")
     apt project(":chopperprocessor")
 
-//    compile 'com.github.levelapp.Chopper:chopperannotation:0.3'
-//    compile 'com.github.levelapp.Chopper:chopperbutterknife:0.3'
-//    compile 'com.github.levelapp.Chopper:chopperrxjava:0.3'
-//    apt 'com.github.levelapp.Chopper:chopperprocessor:0.3'
+//    compile 'com.github.levelapp.Chopper:chopperannotation:1.0.0'
+//    compile 'com.github.levelapp.Chopper:chopperbutterknife:1.0.0'
+//    compile 'com.github.levelapp.Chopper:chopperrealm:1.0.0'
+//    compile 'com.github.levelapp.Chopper:chopperrxjava:1.0.0'
+//    apt 'com.github.levelapp.Chopper:chopperprocessor:1.0.0'
 }
