--- a/chopperandroid/build.gradle
+++ b/chopperandroid/build.gradle
@@ -18,10 +18,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
-    compile project (':chopperannotation')
+    compile project(':chopperannotation')
     compile 'com.android.support:recyclerview-v7:25.1.0'
 }
 
