--- a/chopperrealm/build.gradle
+++ b/chopperrealm/build.gradle
@@ -17,10 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
-    compile project (':chopperannotation')
+    compile project(':chopperannotation')
     compile 'io.realm:realm-android-library:2.2.1'
 }
 
