--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -29,35 +29,31 @@ android {
     compileOptions {
 //        sourceCompatibility JavaVersion.VERSION_1_8
 //        targetCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
     testCompile 'junit:junit:4.12'
-
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-
     compile 'io.reactivex:rxjava:1.2.4'
     compile 'io.reactivex:rxandroid:1.2.1'
-
     compile 'io.realm:realm-android-library:2.2.1'
-
-    compile project (':chopperannotation')
-    compile project(":chopperbutterknife")
-    compile project(":chopperrealm")
-    compile project(":chopperrxjava")
+    compile project(':chopperannotation')
+    compile project(':chopperbutterknife')
+    compile project(':chopperrealm')
+    compile project(':chopperrxjava')
     apt project(":chopperprocessor")
-
-//    compile 'com.github.levelapp.Chopper:chopperannotation:1.0.0'
-//    compile 'com.github.levelapp.Chopper:chopperbutterknife:1.0.0'
-//    compile 'com.github.levelapp.Chopper:chopperrealm:1.0.0'
-//    compile 'com.github.levelapp.Chopper:chopperrxjava:1.0.0'
-//    apt 'com.github.levelapp.Chopper:chopperprocessor:1.0.0'
+    //    compile 'com.github.levelapp.Chopper:chopperannotation:1.0.0'
+    //    compile 'com.github.levelapp.Chopper:chopperbutterknife:1.0.0'
+    //    compile 'com.github.levelapp.Chopper:chopperrealm:1.0.0'
+    //    compile 'com.github.levelapp.Chopper:chopperrxjava:1.0.0'
+    //    apt 'com.github.levelapp.Chopper:chopperprocessor:1.0.0'
 }
