--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ android:
   components:
     - build-tools-25.0.2
     - android-25
-    - extra
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
