--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ jdk:
   - oraclejdk8 
 android:
   components:
+    - tools
+    - tools
     - build-tools-25.0.2
     - android-25
     - extra-google-google_play_services
