add abortOnError lint option

--- a/chopperbutterknife/build.gradle
+++ b/chopperbutterknife/build.gradle
@@ -18,8 +18,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_7
+    lintOptions {
+        abortOnError false
     }
 }
 
