--- a/chopperrealm/build.gradle
+++ b/chopperrealm/build.gradle
@@ -25,6 +25,7 @@ android {
 dependencies {
     compile project(':chopperannotation')
     compile 'io.realm:realm-android-library:2.2.1'
+    provided 'io.realm:realm-android-library:2.2.1'
 }
 
 sourceCompatibility = "1.7"
