--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -40,11 +40,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'io.reactivex:rxjava:1.2.4'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.realm:realm-android-library:2.2.1'
+//    compile 'com.jakewharton:butterknife:8.4.0'
+//    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+//    compile 'io.reactivex:rxjava:1.2.4'
+//    compile 'io.reactivex:rxandroid:1.2.1'
+//    compile 'io.realm:realm-android-library:2.2.1'
     compile project(':chopperannotation')
     compile project(':chopperbutterknife')
     compile project(':chopperrealm')
