--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,7 +21,7 @@ android {
         }
         debug {
             debuggable true
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
